[gd_scene load_steps=19 format=3 uid="uid://0vq5s3xjx0s1"]

[ext_resource type="Script" uid="uid://q2ptla7rsxjf" path="res://scripts/core/player.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://crso1hkaafsq7" path="res://scripts/ability/base_ability.gd" id="2_dqkch"]
[ext_resource type="Script" uid="uid://bd6xaxxqu7mfi" path="res://scripts/ability/dash_ability.gd" id="3_dqkch"]
[ext_resource type="Script" uid="uid://bye0tonpmqsgp" path="res://scripts/ability/enemy_freeze_ability.gd" id="4_qlg0r"]
[ext_resource type="PackedScene" uid="uid://drrywdbhqlsmt" path="res://scenes/skills/mirror_clone.tscn" id="5_tuyoq"]
[ext_resource type="Texture2D" uid="uid://k58dlpma6y56" path="res://assets/horse/southwest_horse.png" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://v2x2lfyg6dm5" path="res://scripts/utils/camera_2d.gd" id="7_bkcae"]
[ext_resource type="AudioStream" uid="uid://do18yfqluwxy7" path="res://assets/audio/sfx/horse_hit1.wav" id="8_xdgue"]
[ext_resource type="AudioStream" uid="uid://cqyoyecs0xxmq" path="res://assets/audio/sfx/horse_snore1.wav" id="9_q7umf"]
[ext_resource type="AudioStream" uid="uid://db5p0w0apa0pu" path="res://assets/audio/sfx/horse_power1.wav" id="10_e4ntq"]
[ext_resource type="AudioStream" uid="uid://b8t5heqrcyaeq" path="res://assets/audio/sfx/horse_snore2.wav" id="11_015im"]
[ext_resource type="AudioStream" uid="uid://b3uhk4fei72jp" path="res://assets/audio/sfx/horse_walk1.wav" id="12_ok506"]
[ext_resource type="AudioStream" uid="uid://d006nrwd4l1l6" path="res://assets/audio/sfx/horse_whine1.wav" id="13_paeg5"]
[ext_resource type="AudioStream" uid="uid://tcfsh04yp0m1" path="res://assets/audio/sfx/horse_whine2.wav" id="14_5n7gj"]

[sub_resource type="Resource" id="Resource_qlg0r"]
script = ExtResource("3_dqkch")
metadata/_custom_type_script = "uid://bd6xaxxqu7mfi"

[sub_resource type="Resource" id="Resource_tuyoq"]
script = ExtResource("4_qlg0r")
metadata/_custom_type_script = "uid://bye0tonpmqsgp"

[sub_resource type="SpriteFrames" id="SpriteFrames_qm0ti"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tuyoq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tuyoq")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhbv5"]
size = Vector2(502, 415)

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_g2els")
speed = 3000.0
melee_knockback_force = 10000.0
abilities = Array[ExtResource("2_dqkch")]([SubResource("Resource_qlg0r"), SubResource("Resource_tuyoq")])
mirror_clone_scene = ExtResource("5_tuyoq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qm0ti")
animation = &"move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(40, 226)
shape = SubResource("RectangleShape2D_fhbv5")

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="RunTimer" type="Timer" parent="."]
one_shot = true

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(0.2, 0.2)
position_smoothing_enabled = true
rotation_smoothing_enabled = true
script = ExtResource("7_bkcae")

[node name="hit" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_xdgue")

[node name="snore1" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_q7umf")

[node name="powerup1" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_e4ntq")

[node name="snore2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_015im")

[node name="walk" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_ok506")

[node name="whine1" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_paeg5")

[node name="whine2" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("14_5n7gj")

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="timeout" from="RunTimer" to="." method="_on_run_timer_timeout"]
